--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
                     ./images/portfolio/mobile/banking-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/banking-mobile.jpg"
                   alt="Banking App"
                 />
 
@@ -431,6 +432,7 @@
                     ./images/portfolio/mobile/payment-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/payment-mobile.jpg"
                   alt="Cashless Payment"
                 />
 
@@ -457,6 +459,7 @@
                     ./images/portfolio/mobile/meditation-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/meditation-mobile.jpg"
                   alt="Meditation App"
                 />
 
@@ -483,6 +486,7 @@
                     ./images/portfolio/mobile/taxi-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/taxi-mobile.jpg"
                   alt="Taxi car"
                 />
 
@@ -509,6 +513,7 @@
                     ./images/portfolio/mobile/illustrations-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/illustrations-mobile.jpg"
                   alt="Screen Illustrations"
                 />
 
@@ -535,6 +540,7 @@
                     ./images/portfolio/mobile/online-mobile@2x.jpg   576w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/portfolio/mobile/online-mobile.jpg"
                   alt="smiling girl holding a phone"
                 />
 
