--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
       </div>
     </div>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal-window-wrapper">
         <button class="close-window-btn" type="button">
           <svg
@@ -868,8 +868,8 @@
               </span>
               <span class="label-text-wrapper">
                 I accept the terms and conditions of the
+                <a class="privacy-link" href="">Privacy Policy</a>
               </span>
-              <a class="privacy-link" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="send-btn" type="submit">Send</button>
