--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
       </div>
     </div>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-window-wrapper">
         <button class="close-window-btn" type="button">
           <svg
