--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Main -->
     <main>
       <section class="hero-page">
-        <div class="hero-page-container container">
+        <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="order-btn" type="button">Order Service</button>
         </div>
