--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         </div>
         <div class="subscribe-form-wrapper">
           <p class="footer-subject">Subscribe</p>
-          <form class="subscribe-form" name="subscribe_form">
+          <form class="subscribe-form" name="subscribe_form" autocomplete="off">
             <label class="subscribe-label">
               <input
                 class="subscribe-form-input"
