add loading="lazy" to img

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-card-container">
                 <h3 class="team-card-name card-title">Mark Guerrero</h3>
@@ -203,6 +204,7 @@
                 alt="Tom Ford"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-card-container">
                 <h3 class="team-card-name card-title">Tom Ford</h3>
@@ -266,6 +268,7 @@
                 alt="Camila Garcia"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-card-container">
                 <h3 class="team-card-name card-title">Camila Garcia</h3>
@@ -329,6 +332,7 @@
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-card-container">
                 <h3 class="team-card-name card-title">Daniel Wilson</h3>
@@ -407,6 +411,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/banking-mobile.jpg"
                   alt="Banking App"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
@@ -434,6 +439,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/payment-mobile.jpg"
                   alt="Cashless Payment"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
@@ -461,6 +467,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/meditation-mobile.jpg"
                   alt="Meditation App"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
@@ -488,6 +495,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/taxi-mobile.jpg"
                   alt="Taxi car"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
@@ -515,6 +523,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/illustrations-mobile.jpg"
                   alt="Screen Illustrations"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
@@ -542,6 +551,7 @@
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/portfolio/mobile/online-mobile.jpg"
                   alt="smiling girl holding a phone"
+                  loading="lazy"
                 />
 
                 <p class="overlay-text">
